testsuite/tests/typecheck/should_fail/T16512a.stderr

T16512a.hs:41:25: error:
    • Couldn't match type ‘as’ with ‘a : as’
      Expected: AST (ListVariadic (a : as) b)
        Actual: AST (ListVariadic as (a -> b))
      ‘as’ is a rigid type variable bound by
        a pattern with constructor:
          AnApplication :: forall (as :: [*]) b.
                           AST (ListVariadic as b) -> ASTs as -> AnApplication b,
        in a case alternative
        at T16512a.hs:40:9-26
    • In the first argument of ‘AnApplication’, namely ‘g’
      In the expression: AnApplication g (a `ConsAST` as)
      In a case alternative:
          AnApplication g as -> AnApplication g (a `ConsAST` as)
    • Relevant bindings include
        as :: ASTs as (bound at T16512a.hs:40:25)
        g :: AST (ListVariadic as (a -> b)) (bound at T16512a.hs:40:23)
        a :: AST a (bound at T16512a.hs:38:15)
        f :: AST (a -> b) (bound at T16512a.hs:38:10)
